--- a/samples/ssr/taslp19_demo.html
+++ b/samples/ssr/taslp19_demo.html
@@ -121,7 +121,7 @@ Systems:
 		<td>Sample 1</ >
 		<td>
 			<audio controls="" style="width: 250px;">
-				<source src="https://github.com/burningding/ssr_samples/blob/master/ssr/mm/arctic_a0588.wav" type="audio/wav">Your browser does not support the audio tag.</source>
+				<source src="ssr/ssr/mm/arctic_a0590.wav" type="audio/wav">Your browser does not support the audio tag.</source>
 			</audio>
 		</td>
 		<td>
