--- a/samples/ssr/ssr_demo.html
+++ b/samples/ssr/ssr_demo.html
@@ -364,7 +364,7 @@ Systems:
 		</td>
 		<td>
 			<audio controls="" style="width: 250px;">
-				<source src="tgt/fff/arctic_a0588.wav" type="audio/wav">Your browser does not support the audio tag.</source>
+				<source src="tgt/ff/arctic_a0588.wav" type="audio/wav">Your browser does not support the audio tag.</source>
 			</audio>
 		</td>
 		<td>
