--- a/samples/gle/gle_demo.html
+++ b/samples/gle/gle_demo.html
@@ -93,6 +93,7 @@ main table.samples td{
 <h1>Voice Conversion Audio Samples</h1>
 
 <p>Dataset: CSTR VCTK dataset <a href="https://homepages.inf.ed.ac.uk/jyamagis/page3/page58/page58.html">[1]</a><p>
+<p>Note: the parallel samples shown here are just for easier comparison. In training, we did not require parallel corpus and we did not use parallel corpus.
 <hr>
 Systems:
 
