modify citation of vctk

--- a/samples/gle/gle_demo.html
+++ b/samples/gle/gle_demo.html
@@ -400,7 +400,7 @@ Systems:
 
 <hr>
 <h1>References</h1>
-<p>[1] Veaux, Christophe, Junichi Yamagishi, and Kirsten MacDonald. "SUPERSEDED-CSTR VCTK Corpus: English Multi-speaker Corpus for CSTR Voice Cloning Toolkit." (2016). </p> 
+<p>[1] Veaux, Christophe, Junichi Yamagishi, and Kirsten MacDonald. "CSTR VCTK Corpus: English Multi-speaker Corpus for CSTR Voice Cloning Toolkit." (2017). </p> 
 <p>[2] van den Oord, Aaron, and Oriol Vinyals. "Neural discrete representation learning." Advances in Neural Information Processing Systems. 2017. <a href="https://papers.nips.cc/paper/7210-neural-discrete-representation-learning.pdf">[PDF]</a></p> 
 <p>[3] Zhao, Guanlong, et al. "Accent conversion using phonetic posteriorgrams." 2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). IEEE, 2018. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8462258">[PDF]</a></p> 
 </main>
