--- a/samples/gle/gle_demo.html
+++ b/samples/gle/gle_demo.html
@@ -113,7 +113,7 @@ Systems:
 		<th>Source</th>
 		<th>Target</th>
 		<th>GLE (Proposed)</th>
-		<th>VQVAE</th>
+		<th>VQ-VAE</th>
 		<th>PPG-GMM</th>
 	</tr>
 	<tr>
@@ -187,7 +187,7 @@ Systems:
 		<th>Source</th>
 		<th>Target</th>
 		<th>GLE (Proposed)</th>
-		<th>VQVAE</th>
+		<th>VQ-VAE</th>
 		<th>PPG-GMM</th>
 	</tr>
 	<tr>
@@ -261,7 +261,7 @@ Systems:
 		<th>Source</th>
 		<th>Target</th>
 		<th>GLE (Proposed)</th>
-		<th>VQVAE</th>
+		<th>VQ-VAE</th>
 		<th>PPG-GMM</th>
 	</tr>
 	<tr>
@@ -335,7 +335,7 @@ Systems:
 		<th>Source</th>
 		<th>Target</th>
 		<th>GLE (Proposed)</th>
-		<th>VQVAE</th>
+		<th>VQ-VAE</th>
 		<th>PPG-GMM</th>
 	</tr>
 	<tr>
