change paper name

--- a/samples/cssr/cssr_demo.html
+++ b/samples/cssr/cssr_demo.html
@@ -82,7 +82,7 @@ main table.samples td{
 <tbody>
 <tr>
 <td>
-<h1>Unsupervised Learning Structured Sparse Representations for Voice Conversion</h1>
+<h1>Learning Structured Sparse Representations for Voice Conversion</h1>
 <h2>Shaojin Ding, Guanlong Zhao, Christopher Liberatore, Ricardo Gutierrez-Osuna</h2>
 <h2>Department of Computer Science and Engineering, Texas A&M University, USA</h2>
 </td>
