--- a/samples/adv/adv_demo.html
+++ b/samples/adv/adv_demo.html
@@ -104,7 +104,7 @@ Systems:
 </ul>
 <hr>
 
-<h2>Inset testing</h2>
+<h2>Inset testing (test speakers were known during training)</h2>
 
 <table width="100%" class="samples">
 <tbody>
@@ -215,7 +215,7 @@ Systems:
 
 <hr>
 
-<h2>One-shot testing</h2>
+<h2>One-shot testing (test speakers were unseen during training)</h2>
 <table width="100%" class="samples">
 <tbody>
 	<tr>
