--- a/demo/fac-to-arbitrary-speaker/index.html
+++ b/demo/fac-to-arbitrary-speaker/index.html
@@ -615,9 +615,9 @@ main table.samples td{
 
 <hr>
 <h1>References</h1>
-<p>[1] Kominek, John, and Alan W. Black. "The CMU Arctic speech databases." Fifth ISCA workshop on speech synthesis. 2004. </p> 
-<p>[2] Zhao, Guanlong, et al. "L2-ARCTIC: A non-native English speech corpus." Perception Sensing Instrumentation Lab (2018).</p> 
-<p>[3] Zhao, Guanlong, et al. "Accent conversion using phonetic posteriorgrams." 2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). IEEE, 2018. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8462258">[PDF]</a></p> 
-<p>[4] Zhao, Guanlong, Shaojin Ding, and Ricardo Gutierrez-Osuna. "Foreign Accent Conversion by Synthesizing Speech from Phonetic Posteriorgrams." Proc. Interspeech. 2019. <a href="https://www.isca-speech.org/archive/Interspeech_2019/pdfs/1778.pdf">[PDF]</a></p>
+<p>[1] J. Kominek and A. W. Black, "The CMU Arctic speech databases," in Fifth ISCA Workshop on Speech Synthesis, 2004.</p> 
+<p>[2] G. Zhao, S. Sonsaat, A. O. Silpachai, I. Lucic, E. Chukharev-Khudilaynen, J. Levis, et al., "L2-ARCTIC: A Non-Native English Speech Corpus," Perception Sensing Instrumentation Lab, 2018.</p> 
+<p>[3] G. Zhao and R. Gutierrez-Osuna, "Using Phonetic Posteriorgram Based Frame Pairing for Segmental Accent Conversion," IEEE/ACM Transactions on Audio, Speech, and Language Processing, vol. 27, pp. 1649-1660, 2019. <a href="https://ieeexplore.ieee.org/abstract/document/8755490">[PDF]</a></p> 
+<p>[4] G. Zhao, S. Ding, and R. Gutierrez-Osuna, "Foreign Accent Conversion by Synthesizing Speech from Phonetic Posteriorgrams," Proc. Interspeech 2019, pp. 2843-2847, 2019. <a href="https://www.isca-speech.org/archive/Interspeech_2019/pdfs/1778.pdf">[PDF]</a></p>
 </main>
 </body></html>
